# wiki

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  CLAUDE.md  README.md
.github/workflows/: markdown-lint.yml
.obsidian/: community-plugins.json  graph.json  types.json
_mcp/: README.md  pyproject.toml
_mcp/src/wiki_mcp/: index_build.py  server.py
_meta/: connections.md  glossary.md  index.md  log.md  open-questions.md
empresarial/: _index.md
espiritual/: _index.md
estudos/: _index.md
estudos/concepts/: carga-cognitiva.md  dificuldades-desejadas.md  ilusao-do-aprendizado.md  pratica-com-recuperacao.md  pratica-espacada.md
estudos/sources/: 2026-05-17-estudar-10x-melhor-emmanuel-nominato.md
pessoal/: _index.md
pessoal/concepts/: alexitimia.md  auto-sabotagem.md  autodisciplina.md  conectar-os-pontos.md  conquista-vs-manutencao.md  cortex-cingulado-anterior-dorsal.md  dedicacao-vs-talento.md  dessensibilizacao-dopaminergica.md  dopamina.md  economia-da-atencao.md  efeito-bannister.md  fingir-ate-se-tornar.md  foco.md  gratidao.md  habito-de-reclamacao.md  manutencao-da-vida.md  mecanismo-de-protecao-cerebral.md  medo-de-errar.md  memento-mori.md  mentalidade-de-temporada.md  modo-do-todo-mundo.md  novidade-vs-dificuldade.md  ocio.md  paciencia-ativa.md  pensamento-retrospectivo.md  postura-de-curiosidade.md  protocolo-de-foco-diario.md  reforco-por-razao-variavel.md  rituais-de-iniciacao.md  scroll-infinito.md  sistemas-vs-metas.md  tecnica-do-nao-zero.md  vocacao.md  zona-de-conforto.md
rafacho.dev/: _index.md
tecnico/: _index.md
(+108 files in other folders)
