[project]
name = "wiki-mcp"
version = "0.1.0"
description = "MCP read-only para a wiki pessoal (second brain) do Rafacho"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
    "fastembed>=0.4.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_mcp"]
